# sbmod

./: LICENSE.txt  README.md  pyproject.toml  sbmod.py
sbmod/: __init__.py  __main__.py  bot.py  constants.py  models.py  utilities.py  verification.py
tests/: test_models.py  test_sbmod.py  test_utilities.py
